--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Lamer news</title>
+    <link rel="stylesheet" href="/app/stylesheets/styles.css">
   </head>
   <body>
     <header class="main-header">
