--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,6 @@
       </nav>
     </header>
     <div ui-view></div>
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="node_modules/angular-cookies/angular-cookies.js"></script>
-    <script src="app/core/lamer.module.js"></script>
-    <script src="app/app.js"></script>
+    <script src="app/bundle.js"></script>
   </body>
 </html>
