--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,12 @@
         </ul>
       </nav>
     </header>
+    <a ui-sref="article">clck</a>
     <div ui-view></div>
-    <script src="app/bundle.js"></script>
+    <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/angular-cookies/angular-cookies.js"></script>
+    <script src="app/app.js"></script>
+    <!-- <script src="/app/bundle.js"></script> -->
   </body>
 </html>
