add articles component

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="node_modules/angular-cookies/angular-cookies.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/components/singleArticle/singleArticle.js"></script>
+    <script src="app/components/listArticles/listArticles.js"></script>
     <!-- <script src="/app/bundle.js"></script> -->
   </body>
 </html>
