--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
           <li><a href="#">Latest</a></li>
           <li><a href="#">Random</a></li>
           <li><a ui-sref="submit">Submit new</a></li>
+          <li><a ui-sref="login" login-check>Login</a></li>
         </ul>
       </nav>
     </header>
@@ -28,6 +29,7 @@
     <script src="app/app.js"></script>
     <script src="app/components/singleArticle/singleArticle.js"></script>
     <script src="app/components/listArticles/listArticles.js"></script>
+    <script src="app/components/login/login.js"></script>
     <!-- <script src="/app/bundle.js"></script> -->
   </body>
 </html>
