--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <script src="app/components/singleArticle/singleArticle.js"></script>
     <script src="app/components/listArticles/listArticles.js"></script>
     <script src="app/components/login/login.js"></script>
+    <script src="app/components/user/user.js"></script>
     <!-- <script src="/app/bundle.js"></script> -->
   </body>
 </html>
