add latest article condition

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li><a href="#">Top</a></li>
-          <li><a href="#">Latest</a></li>
+          <li><a ui-sref="latest">Latest</a></li>
           <li><a href="#">Random</a></li>
           <li><a ui-sref="submit">Submit new</a></li>
           <li><a ui-sref="login" login-check>Login</a></li>
