--- a/app/index.html
+++ b/app/index.html
@@ -2,22 +2,21 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
-    <title>Lamer news</title>
+    <title>Lamer News</title>
     <link rel="stylesheet" href="/app/stylesheets/styles.css">
   </head>
   <body>
     <base href='/'>
     <header class="main-header">
       <a href="#" class="logo"><img src="" alt=""></a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li><a href="#">Top</a></li>
-          <li><a ui-sref="latest">Latest</a></li>
-          <li><a ui-sref="random" ui-sref-opts="{reload:true}">Random</a></li>
-          <li><a ui-sref="submit">Submit new</a></li>
-          <li><a ui-sref="login" login-check>Login</a></li>
-        </ul>
-      </nav>
+      <ul class="navigation-list">
+        <li><a href="#">Top</a></li>
+        <li><a ui-sref="latest">Latest</a></li>
+        <li><a ui-sref="random" ui-sref-opts="{reload:true}">Random</a></li>
+        <li><a ui-sref="submit">Submit new</a></li>
+        <li><a ui-sref="login" login-check>Login</a></li>
+        <li><a ui-sref="register">Register</a></li>
+      </ul>
     </header>
     <main>
       <list-articles></list-articles>
