--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
         <li><a ui-sref="submit">Submit new</a></li>
         <li><a ui-sref="login" login-check>Login</a></li>
         <li><a ui-sref="register">Register</a></li>
+        <li><a ui-sref="logout">Logout</a></li>
       </ul>
     </header>
     <main>
