--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,13 @@
     <base href='/'>
     <header class="main-header">
       <a href="#" class="logo"><img src="" alt=""></a>
-      <ul class="navigation-list">
+      <ul class="navigation-list" login-check>
         <li><a href="#">Top</a></li>
         <li><a ui-sref="latest">Latest</a></li>
         <li><a ui-sref="random" ui-sref-opts="{reload:true}">Random</a></li>
         <li><a ui-sref="submit">Submit new</a></li>
-        <li><a ui-sref="login" login-check>Login</a></li>
+        <li><a ui-sref="login" ng-if="!isLogined">Login</a></li>
+        <li><a ui-sref="users({ username })" ng-if="isLogined">{{username}}</a></li>
         <li><a ui-sref="register">Register</a></li>
       </ul>
     </header>
