--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <li><a ui-sref="submit">Submit new</a></li>
         <li><a ui-sref="login" ng-if="!isLogined">Login</a></li>
         <li><a ui-sref="users({ username })" ng-if="isLogined">{{username}}</a></li>
-        <li><a ui-sref="register">Register</a></li>
+        <li><a ui-sref="register" ng-if="!isLogined">Register</a></li>
       </ul>
     </header>
     <main>
