add some validation

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <body>
     <base href='/'>
     <header class="main-header">
-      <a href="#" class="logo"><img src="" alt=""></a>
+      <a ui-sref="home" class="logo"><img src="" alt=""></a>
       <ul class="navigation-list" login-check>
         <li><a href="#">Top</a></li>
         <li><a ui-sref="latest">Latest</a></li>
