add top sorting

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <a ui-sref="home" class="logo"><img src="" alt=""></a>
       <ul class="navigation-list" login-check>
-        <li><a href="#">Top</a></li>
+        <li><a ui-sref="top">Top</a></li>
         <li><a ui-sref="latest">Latest</a></li>
         <li><a ui-sref="random" ui-sref-opts="{reload:true}">Random</a></li>
         <li><a ui-sref="submit">Submit new</a></li>
